--- a/www/scss/ldart/fixes.scss
+++ b/www/scss/ldart/fixes.scss
@@ -8,5 +8,5 @@
 
 // mobile
 .slds-tabs--path {
-  overflow: hidden;
+  overflow: auto;
 }
